test/compile-fail/scope/use-super/expected.txt
error: unresolved import `super`
 --> top.rhdl:2:7
  |
2 | use a::super;
  |        ^^^^^ no `super` in `a`
